--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@ justify-content: center;
         <h1>Welcome to OnlineMeals</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid officia expedita voluptates numquam cum ipsa, voluptatibus placeat distinctio harum </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolores ad ullam fuga hic quod dicta voluptates, aliquid qui nobis!</p>
-        <button class="btn">Order Now</button>
+        <form action="./Menu.html">
+            <button class="btn">Order Now</button>
+        </form>
     </section>
 
     <section class="services-container">
@@ -334,6 +336,9 @@ justify-content: center;
             <div class="formsection">
                 <label for="">meassage</label>
                 <textarea name="meassage" id="" cols="30" rows="10"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="btn">Submit</button>
             </div>
         </div>
         </form>
