--- a/index.html
+++ b/index.html
@@ -296,34 +296,15 @@ justify-content: center;
 
         </div>
     </section>
-
-    <section id="client-section">
-        <h1>Our Clients</h1>
-        <div id="clients">
-              <div class="logos">
-                  <img src="./ClientImages/logo1.JPG" alt="">
-              </div>
-               <div class="logos">
-                <img src="./ClientImages/logo2.JPG" alt="">
-            </div> 
-            <div class="logos">
-                <img src="./ClientImages/logo3.JPG" alt="">
-            </div>
-            <div class="logos">
-                <img src="./ClientImages/logo4.JPG" alt="">
-            </div> 
-              
-
-        </div>
-    </section>
-
+   
+    
     <section id="contactus">
         <h1>Contact us</h1>
         <form action="">
             <div class="form">
             <div class="formsection">
                 <label for="">Name</label>
-                <input type="text" placeholder="Enter your name">  
+                <input type="text" placeholder="Enter your name" pattern="[A-Za-z]+">  
             </div>
             <div class="formsection">
                 <label for="">Email</label>
@@ -331,7 +312,7 @@ justify-content: center;
             </div>
             <div class="formsection">
                 <label for="">Phone No</label>
-                <input type="Phone no" placeholder="Enter your phone no">  
+                <input type="Phone no" placeholder="Enter your phone no" pattern="[0-9]{10}">  
             </div>
             <div class="formsection">
                 <label for="">meassage</label>
