--- a/cart.html
+++ b/cart.html
@@ -135,12 +135,13 @@
              <li class="item"><a href="./aboutus.html">About us</a></li>
              <li class="item"><a href="./cart.html"><div id="item__cart">Cart</div></a></li>
              <li class="item"><a href="./cart.html"><div id="item__price">Total()</div></a></li>
+             <li class="item"><a href="./customerdetail.html">Customer Details</a></li></li>
          </ul>
 
     </nav>
     <div style="background-color:burlywood;margin-top: -14px;">
         <h3 style="margin-top: 20px;font-size: xx-large;text-align: center;">Your Items</h3>
-        <form action="">
+        <form action="customerdetail.html">
             <div id="cart">
                 <!-- <div class="cart_item">
                             <img src="kadai-paneer.jpg" alt="">
